[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cft"
version = "0.1.0"
description = "CloudFront TUI and CLI for usage, billing, and log analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "duckdb>=1.0",
  "pydantic-settings>=2.2",
  "platformdirs>=4.2",
  "rich>=13.7",
  "textual>=0.80",
  "tomlkit>=0.13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
cft = "cft.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

